clang/test/BSC/Negative/Trait/GenericTrait/impl_trait2/impl_trait2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this);
};

int int::foo(int* this) {
  return 10;
}

_Impl _Trait F<int>* for int; // expected-error {{unexpected token for ImplTraitDecl}}